--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "backend_travel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index",
+    "start": "node app",
     "dev": "nodemon index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^12.1.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nanoid": "^3.3.4",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
