--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend_travel",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
@@ -15,6 +15,8 @@
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
     "yargs": "^17.7.2"
   },
