--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
