--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "moment": "^2.30.1",
+    "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
     "yargs": "^17.7.2"
